--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "react-dom": "^15.4.1",
     "redux": "^3.6.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "watchify": "^3.7.0"
+  },
   "scripts": {
     "build": "browserify -t babelify client/index.js > public/bundle.js",
+    "watch": "watchify -t babelify client/index.js -o public/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "babel": {
